dep: pull the deps from maven.
To better keeps the deps up to date we can actually use the built
in maven feature to pull the latest.

--- a/src/main/g8/default.properties
+++ b/src/main/g8/default.properties
@@ -1,3 +1,6 @@
 name=Scala Hello World
 package=example
 description=A minimal Scala project built with Mill
+
+scala-version = maven(org.scala-lang, scala-compiler, stable)
+munit = maven(org.scalameta, munit_2.13, stable)
